--- a/src/styling/navbar.css
+++ b/src/styling/navbar.css
@@ -6,7 +6,7 @@
   padding: 0px 80px;
   background: white;
   box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
-  background: #1b1b1d;
+  background: #5b5b5e;
   color: white;
 }
 
@@ -88,4 +88,6 @@
 }
 
 .submit:hover {
-}
+  background: rgb(181, 173, 173);
+  color: rgb(22, 22, 22);
+  }
